--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,6 +18,10 @@ environment:
     WARNINGS_ARE_ERRORS: 1
 
   matrix:
+  - R_VERSION: 3.0.0
+    RTOOLS_VERSION: 31
+    CRAN: http://cran.rstudio.com
+
   - R_VERSION: devel
     GCC_PATH: mingw_32
 
@@ -35,6 +39,9 @@ environment:
   - R_VERSION: oldrel
     RTOOLS_VERSION: 32
     CRAN: http://cran.rstudio.com
+
+matrix:
+  fast_finish: true
 
 build_script:
   - travis-tool.sh install_deps
